pages on firefox fix

--- a/static/style.css
+++ b/static/style.css
@@ -3109,6 +3109,7 @@ to {background-position: -200% 0;}
     margin-bottom: 48px;
     display: flex;
     justify-content: center;
+    left: 0;
 
   }
 
